k8s/dapr.app.consumer.yaml
kind: Service
apiVersion: v1
metadata:
  name: consumer
  labels:
    app: consumer
spec:
  selector:
    app: consumer
  ports:
    - protocol: TCP
      port: 9091
      targetPort: 8080
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer
  labels:
    app: consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumer
  template:
    metadata:
      labels:
        app: consumer
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "consumer"
        dapr.io/app-port: "8080"
        dapr.io/config: "tracing"
        dapr.io/log-level: "debug"
    spec:
      containers:
        - name: consumer
          image: ghcr.io/felpasl/dapr-demo/consumer:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
      imagePullSecrets:
        - name: regcred
