k8s/dapr.app.publisher.yaml
kind: Service
apiVersion: v1
metadata:
  name: publisher
  labels:
    app: publisher
spec:
  selector:
    app: publisher
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: publisher
  labels:
    app: publisher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: publisher
  template:
    metadata:
      labels:
        app: publisher
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "publisher"
        dapr.io/app-port: "8080"
        dapr.io/config: "tracing"
        dapr.io/log-level: "debug"
    spec:
      containers:
        - name: publisher
          image: ghcr.io/felpasl/dapr-demo/publisher:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
      imagePullSecrets:
        - name: regcred
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: publisher
  namespace: default
  labels:
    name: publisher
spec:
  ingressClassName: nginx
  rules:
    - host: pub.localhost
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: publisher
                port:
                  number: 8081
