k8s/redis-insight.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-insight
spec:
  selector:
    app: redis-insight
  ports:
    - port: 8001
      targetPort: 8001
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-insight
  labels:
    name: redis-insight
spec:
  ingressClassName: nginx
  rules:
    - host: redis.localhost
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: redis-insight
                port:
                  number: 8001

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-insight
spec:
  selector:
    matchLabels:
      app: redis-insight
  template:
    metadata:
      labels:
        app: redis-insight
    spec:
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: redisinsight-pv-claim
      containers:
        - name: redis-insight
          image: redislabs/redisinsight:1.13.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: db #Pod volumes to mount into the container's filesystem. Cannot be updated.
              mountPath: /db
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8001
